--- a/FL12_HW2/homework/css/style.css
+++ b/FL12_HW2/homework/css/style.css
@@ -1,5 +1,241 @@
-/*
+@media print {
+  body,
+  .container,
+  .tm-banner,
+  .tm-main-content,
+  .tm-content-box,
+  .padding-medium,
+  .carousel {
+    margin: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    max-width: 100%;
+    text-align: center;
+    background-color: #fff;
+  }
 
-write your code here
+  .tm-sidebar,
+  .tm-team-img,
+  .boxes,
+  .carousel-indicators,
+  .img-contact-us,
+  #contact {
+    display: none;
+  }
 
-*/
+  p.tm-banner-text {
+    animation: none;
+  }
+  h2.tm-section-title {
+    margin-top: 30px;
+  }
+
+  h2 {
+    margin-top: 15px;
+    text-align: center;
+    background-color: transparent;
+    color: lightskyblue;
+    text-transform: uppercase;
+  }
+  .heading.padding-medium h2 {
+    font-weight: 300;
+  }
+  .heading ol {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .heading ol li:nth-child(odd) {
+    position: relative;
+    text-align: right;
+    right: 25%;
+  }
+
+  .heading ol li:nth-child(even) {
+    position: relative;
+    text-align: left;
+    left: 25%;
+  }
+  .blocks .tm-section-description:nth-child(3) {
+    font-style: italic;
+    letter-spacing: 5px;
+    word-spacing: 10px;
+  }
+  footer {
+    margin-bottom: 0;
+  }
+}
+
+@media screen {
+  .tm-nav-item-link:hover {
+    background-color: lightskyblue;
+    color: #fff;
+  }
+
+  .tm-banner {
+    background-image: linear-gradient(to right, lightskyblue, burlywood);
+  }
+  .tm-banner-inner {
+    background-color: white;
+  }
+  .tm-banner-text {
+    text-shadow: 5px 4px 3px #333;
+  }
+
+  .tm-banner-text {
+    animation-name: moving;
+    animation-duration: 3s;
+    -webkit-animation-name: moving;
+    -webkit-animation-duration: 3s;
+  }
+
+  @keyframes moving {
+    from {
+      transform: translateX(200px);
+    }
+    to {
+      transform: translateX(0px);
+    }
+  }
+  .tm-content-box,
+  .tm-sidebar,
+  .blocks,
+  .tm-main-content section:nth-child(2) {
+    box-shadow: 0 0 10px rgba(61, 55, 61, 0.7);
+  }
+  .tm-content-box,
+  .blocks {
+    position: relative;
+  }
+
+  .tm-content-box::after,
+  .blocks::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    border: 22px solid transparent;
+    border-left: 22px solid lightskyblue;
+    border-top: 22px solid lightskyblue;
+  }
+
+  .tm-content-box.flex-2-col {
+    display: flex;
+    justify-content: center;
+    box-shadow: none;
+    align-items: center;
+  }
+
+  .tm-content-box.flex-2-col h2 {
+    text-align: center;
+  }
+  .tm-section-description {
+    text-indent: 25px;
+    text-align: justify;
+    line-height: 1.5rem;
+  }
+
+  #about {
+    box-shadow: none;
+  }
+  #about::after {
+    display: none;
+  }
+  #about li:hover:nth-child(odd) {
+    background-color: lightgray;
+    color: lightskyblue;
+  }
+
+  .heading h2 {
+    color: lightskyblue;
+    text-align: center;
+  }
+
+  .heading ol {
+    list-style-type: lower-alpha;
+  }
+
+  .heading li:hover::before {
+    content: ">";
+    font-weight: bold;
+  }
+
+  .heading ol li .text::after {
+    content: "New";
+    color: red;
+    font-size: 10px;
+    font-weight: bold;
+    font-variant: small-caps;
+    vertical-align: top;
+    display: inline-block;
+  }
+  .blocks .tm-content-box {
+    box-shadow: none;
+  }
+  .blocks .tm-content-box::after {
+    content: none;
+  }
+
+  .blocks .tm-section-description:nth-child(3) {
+    font-style: italic;
+    letter-spacing: 5px;
+    word-spacing: 10px;
+  }
+  li.box.box-work {
+    padding: 10px;
+  }
+  li.box.box-work p {
+    font-style: italic;
+  }
+  li.box.box-work p::first-letter {
+    font-weight: bold;
+  }
+
+  li.box.box-work:nth-child(odd) {
+    background-color: lightskyblue;
+    color: white;
+  }
+
+  .tm-section-description {
+    line-height: 30px;
+    text-indent: 25px;
+  }
+
+  #contact input {
+    border: none;
+    border-bottom: 1px solid lightskyblue;
+  }
+
+  #contact input:focus {
+    background-color: lightskyblue;
+  }
+
+  #contact textarea {
+    border: 1px solid lightskyblue;
+  }
+
+  #contact .form-group:nth-child(4) {
+    position: relative;
+  }
+
+  #contact .form-group:nth-child(4)::after {
+    content: "";
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    background-image: url(../img/email-icon.png);
+    background-size: cover;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+  }
+
+  #contact button {
+    background-color: white;
+    color: lightskyblue;
+    border: 1px solid lightskyblue;
+    padding: 15px 25px;
+    float: right;
+  }
+}
