--- a/FL12_HW2/homework/css/style.css
+++ b/FL12_HW2/homework/css/style.css
@@ -24,6 +24,7 @@
   }
 
   p.tm-banner-text {
+    -webkit-animation: none;
     animation: none;
   }
   h2.tm-section-title {
@@ -74,6 +75,13 @@
   }
 
   .tm-banner {
+    background-image: -webkit-gradient(
+      linear,
+      left top,
+      right top,
+      from(lightskyblue),
+      to(burlywood)
+    );
     background-image: linear-gradient(to right, lightskyblue, burlywood);
   }
   .tm-banner-inner {
@@ -90,11 +98,24 @@
     -webkit-animation-duration: 3s;
   }
 
-  @keyframes moving {
+  @-webkit-keyframes moving {
     from {
+      -webkit-transform: translateX(200px);
       transform: translateX(200px);
     }
     to {
+      -webkit-transform: translateX(0px);
+      transform: translateX(0px);
+    }
+  }
+
+  @keyframes moving {
+    from {
+      -webkit-transform: translateX(200px);
+      transform: translateX(200px);
+    }
+    to {
+      -webkit-transform: translateX(0px);
       transform: translateX(0px);
     }
   }
@@ -102,6 +123,7 @@
   .tm-sidebar,
   .blocks,
   .tm-main-content section:nth-child(2) {
+    -webkit-box-shadow: 0 0 10px rgba(61, 55, 61, 0.7);
     box-shadow: 0 0 10px rgba(61, 55, 61, 0.7);
   }
   .tm-content-box,
@@ -121,9 +143,16 @@
   }
 
   .tm-content-box.flex-2-col {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-shadow: none;
     box-shadow: none;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
   }
 
@@ -137,6 +166,7 @@
   }
 
   #about {
+    -webkit-box-shadow: none;
     box-shadow: none;
   }
   #about::after {
@@ -171,6 +201,7 @@
     display: inline-block;
   }
   .blocks .tm-content-box {
+    -webkit-box-shadow: none;
     box-shadow: none;
   }
   .blocks .tm-content-box::after {
