--- a/FL12_HW3/homework/css/style2.css
+++ b/FL12_HW3/homework/css/style2.css
@@ -30,7 +30,7 @@ header {
       padding-top: 5px;
       color: #fff;
       line-height: 100%;
-      font-family: " Hind ", sans-serif;
+      font-family: "Fresca", sans-serif;
       font-size: 1.3em;
       font-weight: 600;
       letter-spacing: 1px;
@@ -40,7 +40,8 @@ header {
         text-align: center;
         font-size: 0.5rem;
         letter-spacing: normal;
-        transform: scale(1.2, 0.96); }
+        transform: scale(1.2, 0.96);
+        font-family: "Fresca", sans-serif; }
   header .header_heading {
     position: relative;
     width: 500px;
@@ -69,7 +70,8 @@ header {
     color: #fff;
     line-height: 1.48;
     white-space: pre-line;
-    word-spacing: 0.5px; }
+    word-spacing: 0.5px;
+    font-family: "Fresca", sans-serif; }
   header a {
     color: white;
     padding-left: 144px;
@@ -147,7 +149,7 @@ main {
           letter-spacing: -0.5px;
           background-color: inherit; }
         main .section_card_wrap .section_card:nth-of-type(1) .section_card_right_container .section_card_text {
-          font-family: "Source Sans Pro", sans-serif;
+          font-family: "Fresca", sans-serif;
           margin: auto;
           padding: 37px 26px 18px 27px;
           font-size: 0.85rem;
@@ -187,7 +189,7 @@ main {
           letter-spacing: -0.5px;
           background-color: inherit; }
         main .section_card_wrap .section_card:nth-of-type(2) .section_card_right_container .section_card_text {
-          font-family: "Source Sans Pro", sans-serif;
+          font-family: "Fresca", sans-serif;
           margin: auto;
           padding: 31px 20px 15px 22px;
           font-size: 0.85rem;
@@ -227,7 +229,7 @@ main {
           letter-spacing: -0.5px;
           background-color: inherit; }
         main .section_card_wrap .section_card:nth-of-type(3) .section_card_right_container .section_card_text {
-          font-family: "Source Sans Pro", sans-serif;
+          font-family: "Fresca", sans-serif;
           margin: auto;
           padding: 57px 36px 28px 39px;
           font-size: 0.85rem;
@@ -275,7 +277,8 @@ main {
         color: lightgray;
         padding-top: 14px;
         letter-spacing: -0.1px;
-        background-color: inherit; }
+        background-color: inherit;
+        font-family: "Fresca", sans-serif; }
     main .section_banner .section_banner_button {
       margin: auto 155px auto 0; }
 
@@ -292,7 +295,7 @@ footer {
     padding-top: 130px;
     display: flex;
     justify-content: space-between;
-    font-family: " Hind ", sans-serif;
+    font-family: "Fresca", sans-serif;
     color: lightgray; }
     footer .footer-wrap .footer_logo {
       display: flex; }
