--- a/FL12_HW3/homework/scss/_main.scss
+++ b/FL12_HW3/homework/scss/_main.scss
@@ -1,1 +1,320 @@
-// Write your styles here
+$font-families: (
+  "Source":  "Source Sans Pro" ,
+  "Hind": " Hind "
+);
+
+* {
+  margin: 0;
+  padding: 0;
+}
+body {
+  background-color: $bckgColor;
+}
+.header-wrap {
+  max-width: 1525px;
+  margin: 0 auto;
+}
+header {
+  width: 100%;
+  height: 688px;
+  font-family: map-get($font-families, "Source"), sans-serif;
+  background-image: url(#{$backgroungImgSrc});
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border-bottom-right-radius: 40%;
+
+  .landing-logo {
+    display: flex;
+    padding-left: 26px;
+    padding-top: 20px;
+
+    img {
+      height: 44px;
+      width: 44px;
+    }
+
+    p {
+      padding-left: 13px;
+      padding-top: 5px;
+      color: $fontHeaderColor;
+      line-height: 100%;
+      font-family: $fontDayNight;
+      font-size: 1.3em;
+      font-weight: 600;
+      letter-spacing: 1px;
+      transform: scale(1, 1.1);
+
+      span {
+        display: block;
+        text-align: center;
+        font-size: 0.5rem;
+        letter-spacing: normal;
+        transform: scale(1.2, 0.96);
+        font-family: $fontDayNight;
+      }
+    }
+  }
+  .header_heading {
+    position: relative;
+    width: 500px;
+    padding-top: 66px;
+    padding-left: 27px;
+    font-size: 4.17rem;
+    font-weight: 700;
+    color: $fontHeaderColor;
+    letter-spacing: 1px;
+    word-spacing: 1px;
+    line-height: 104%;
+    z-index: 2;
+
+    &::after {
+      content: "";
+      position: absolute;
+      z-index: -1;
+      left: 27px;
+      bottom: 1px;
+      background-color: $selectedWordsColor;
+      width: 288px;
+      height: 46px;
+    }
+  }
+  .header_text {
+    padding-top: 34px;
+    padding-left: 27px;
+    width: 700px;
+    color: $fontHeaderColor;
+    line-height: 1.48;
+    white-space: pre-line;
+    word-spacing: 0.5px;
+    font-family: $fontDayNight;
+  }
+
+  a {
+    color: white;
+    padding-left: 144px;
+    font-size: 1.2rem;
+    font-weight: 700;
+    letter-spacing: -0.5px;
+  }
+}
+.header_button {
+  background-color: $btnColor;
+  margin-top: 58px;
+  margin-left: 27px;
+  border: none;
+  border-radius: 2px;
+  width: 135px;
+  height: 46px;
+  color: white;
+  padding: 1px 0 0 1px;
+  font-family: map-get($font-families, "Source"), sans-serif;
+  font-weight: 700;
+  font-size: 1.1rem;
+  letter-spacing: -0.5px;
+  word-spacing: 1px;
+}
+@mixin sectionCard($width, $marginRigthTop, $paddingText) {
+  margin-bottom: 26px;
+  padding: 20px 20px 18px 18px;
+  position: relative;
+  display: flex;
+  border-radius: 7px;
+  background-color: $bckgCardFooter;
+
+  .section_card_img {
+    display: inline-block;
+    width: $width;
+    height: auto;
+    border-radius: 7px;
+  }
+  .section_card_right_container {
+    margin: $marginRigthTop auto 0;
+    display: inline-block;
+    width: 500px;
+    color: $fontMainColor;
+    background-color: $bckgCardFooter;
+
+    .section_card_heading {
+      font-size: 1.5rem;
+      font-weight: 600;
+      color: #fff;
+      text-align: center;
+      letter-spacing: -0.5px;
+      background-color: inherit;
+    }
+
+    .section_card_text {
+      font-family: $fontDayNight;
+      margin: auto;
+      padding: $paddingText;
+      font-size: 0.85rem;
+      line-height: 1.7;
+      letter-spacing: 0.85px;
+      text-align: justify;
+      background-color: inherit;
+    }
+
+    a.section_link {
+      color: $fontMainColor;
+      display: block;
+      text-align: center;
+      letter-spacing: -0.2px;
+      background-color: inherit;
+    }
+  }
+}
+
+main {
+  width: 100%;
+  font-family: map-get($font-families, "Source"), sans-serif;
+  color: $fontHeaderColor;
+
+  p.section_text {
+    max-width: 600px;
+    text-align: center;
+    font-size: 2.5em;
+    font-weight: 600;
+    margin: 36px auto 34px auto;
+    letter-spacing: 1px;
+    transform: scale(0.95, 1);
+    position: relative;
+    z-index: 2;
+
+    &::after {
+      content: "";
+      position: absolute;
+      right: 103px;
+      bottom: 8px;
+      background-color: $selectedWordsColor;
+      z-index: -1;
+      width: 192px;
+      height: 47px;
+    }
+  }
+  .section_card_wrap {
+    max-width: 1068px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+
+    .section_card:nth-of-type(1) {
+      @include sectionCard(40%, 46px, 37px 26px 18px 27px);
+    }
+    .section_card:nth-of-type(2) {
+      @include sectionCard(38.5%, 41px, 31px 20px 15px 22px);
+    }
+    .section_card:nth-of-type(3) {
+      @include sectionCard(42.5%, 52px, 57px 36px 28px 39px);
+    }
+  }
+
+  .section_banner {
+    max-width: 1146px;
+    display: flex;
+    position: relative;
+    z-index: 2;
+    margin: 104px auto 0;
+    justify-content: space-between;
+    background: linear-gradient(90deg, $bannerGradientColors);
+    border-radius: 5px;
+    height: 138px;
+
+    .section_banner_text_wrap {
+      padding-left: 154px;
+      background-color: inherit;
+
+      p.section_banner_heading {
+        padding-top: 25px;
+        font-size: 1.8em;
+        font-weight: 600;
+        letter-spacing: 0.45px;
+        position: relative;
+        z-index: 2;
+        background-color: inherit;
+
+        &::after {
+          content: "";
+          position: absolute;
+          left: 116px;
+          bottom: 3px;
+          background-color: $selectedWordsColor;
+          z-index: -1;
+          width: 61px;
+          height: 47px;
+        }
+      }
+
+      .section_banner_text {
+        color: $fontMainColor;
+        padding-top: 14px;
+        letter-spacing: -0.1px;
+        background-color: inherit;
+        font-family: $fontDayNight;
+      }
+    }
+    .section_banner_button {
+      @extend .header_button;
+      margin: auto 155px auto 0;
+    }
+  }
+}
+
+footer {
+  margin-top: -71px;
+  height: 232px;
+  width: 100%;
+  background-color: $bckgCardFooter;
+  position: relative;
+  z-index: -1;
+
+  .footer-wrap {
+    max-width: 1472px;
+    margin: 0 auto;
+    padding-top: 130px;
+    display: flex;
+    justify-content: space-between;
+    font-family:$fontDayNight;
+    color: $fontFooterColor;
+
+    .footer_logo {
+      display: flex;
+
+      img {
+        height: 44px;
+        width: 44px;
+      }
+
+      p {
+        padding-left: 15px;
+        padding-top: 6px;
+        line-height: 96%;
+        font-size: 1.3em;
+        font-weight: 600;
+        letter-spacing: 1px;
+        transform: scale(1, 1.1);
+
+        span {
+          text-align: center;
+          display: block;
+          font-size: 0.5rem;
+          letter-spacing: normal;
+          transform: scale(1.2, 0.96);
+        }
+      }
+    }
+    .footer_text {
+      width: 291px;
+      margin-top: -6px;
+      font-size: 0.85rem;
+      line-height: 1.4;
+      letter-spacing: -0.1px;
+    }
+    .footer-cr {
+      padding-right: 1px;
+      padding-top: 9px;
+      font-size: 0.99rem;
+      letter-spacing: -0.15px;
+    }
+  }
+}
