--- a/FL12_HW4/homework/css/style.css
+++ b/FL12_HW4/homework/css/style.css
@@ -97,7 +97,7 @@
   letter-spacing: 1px;
   border: none;
   border-radius: 25px;
-  background-color: whitesmoke;
+  background-color: white;
 }
 
 main {
