--- a/FL12_HW5/homework/css/styles.css
+++ b/FL12_HW5/homework/css/styles.css
@@ -14,19 +14,395 @@ body {
   font-family: roboto;
 }
 .post-1 {
-	background: #9d27b0;
+  background: #9d27b0;
 }
 .post-2 {
-	background: #9bb800;
+  background: #9bb800;
 }
 .post-3 {
-	background: #ed5120;
+  background: #ed5120;
 }
 .post-4 {
-	background: #9d27b0;
+  background: #9d27b0;
 }
 .post-5 {
-	background: #2d95bb;
+  background: #2d95bb;
 }
 
-/* Your styles go here */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  background-color: #0b192f;
+}
+
+body {
+  max-width: 1400px;
+  margin: 0 auto;
+  font-weight: 300;
+}
+
+.header {
+  width: 100%;
+
+  height: 100px;
+  background-color: #024161;
+}
+
+.header-wrap {
+  display: flex;
+  height: 100%;
+  margin: 0 23px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-brand {
+  padding-bottom: 6px;
+}
+.header-brand-first-word {
+  color: white;
+  font-size: 2.9rem;
+  font-weight: 300;
+  letter-spacing: -1px;
+}
+.header-brand-second-word {
+  position: relative;
+  left: -8px;
+  color: #d12767;
+  font-size: 2.8rem;
+  letter-spacing: -4px;
+  font-weight: 300;
+}
+.main-nav {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+.main-nav ul {
+  display: flex;
+  align-items: center;
+  list-style-type: none;
+  margin-right: 45px;
+  height: 100%;
+}
+.nav-item {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+.nav-item:hover {
+  background-color: #1f52a4;
+}
+
+.nav-item a {
+  padding: 22px 24px;
+  color: white;
+  text-decoration: none;
+  font-size: 1.45rem;
+}
+
+.banner {
+  margin-top: 26px;
+  margin-bottom: 17px;
+  width: 100%;
+  height: 440px;
+  background: url(../img/post0.jpg);
+  background-size: cover;
+  background-position: bottom;
+}
+
+.banner-wrap {
+  margin: 0 45px;
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.banner-wrap h1 {
+  margin-bottom: 21px;
+  color: white;
+  font-size: 3.6rem;
+  font-weight: 300;
+}
+.banner-wrap p {
+  margin-bottom: 58px;
+  color: white;
+  width: 75%;
+  font-weight: 500;
+  font-size: 1.15rem;
+  line-height: 1.5;
+  opacity: 0.75;
+}
+
+main {
+  display: flex;
+  justify-content: space-between;
+}
+
+.main-container-article {
+  height: 353px;
+  width: 100%;
+  background-color: #9d27b0;
+  display: flex;
+}
+.article-img:hover {
+  opacity: 0.8;
+}
+
+.article-img img {
+  width: 100%;
+  height: 100%;
+}
+
+.article-content {
+  width: 50.5%;
+  color: white;
+}
+.article-content:hover {
+  opacity: 0.5;
+}
+.article-content-title {
+  display: flex;
+  flex-direction: row;
+}
+
+.article-content-title h1 {
+  float: inherit;
+  padding-top: 43px;
+  padding-left: 46px;
+
+  font-size: 3.8rem;
+  font-weight: 300;
+  letter-spacing: -2px;
+  line-height: 1;
+}
+.article-content .article-date {
+  padding-right: 13px;
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  opacity: 0.3;
+  align-items: center;
+}
+.article-content-title .article-date-day {
+  font-size: 3.5rem;
+  font-weight: 300;
+}
+.article-content-title .article-date-month {
+  font-size: 2rem;
+  padding-top: 9px;
+}
+
+.article-content p {
+  float: inherit;
+  padding: 21px 30px 0 44px;
+  line-height: 1.85;
+  word-spacing: 1px;
+  opacity: 0.9;
+}
+
+.main-container-article:nth-of-type(2) {
+  background-color: #9bb800;
+}
+.main-container-article:nth-of-type(3) {
+  background-color: #ed5120;
+}
+
+.footer-article {
+  background-color: #2d95bb;
+  height: 225px;
+}
+.footer-article .article-content {
+  width: 100%;
+}
+.footer-article .article-content-title {
+  justify-content: space-between;
+}
+.footer-article .article-date {
+  padding-top: 10px;
+}
+.footer-article p {
+  padding-top: 0;
+  padding-right: 150px;
+  letter-spacing: 0.5px;
+}
+.main-aside {
+  width: 24%;
+  padding-left: 15px;
+}
+.main-aside-news {
+  margin-bottom: 30px;
+  background-color: #fff;
+}
+
+.main-aside-img img {
+  width: 100%;
+}
+.main-aside-news-content {
+  padding: 30px 45px;
+}
+.main-aside-news-content h1 {
+  font-weight: 300;
+  font-size: 2rem;
+}
+.main-aside-news-content p {
+  padding-top: 7px;
+  line-height: 1.7;
+  color: #637693;
+  word-spacing: 1px;
+}
+
+.footer {
+  margin-top: 23px;
+  height: 110px;
+  background-color: #024161;
+}
+.footer-wrap {
+  height: 100%;
+  margin: auto 30px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer-leftside,
+.footer-rightside {
+  display: flex;
+  flex-direction: column;
+  padding-top: 15px;
+  color: white;
+  line-height: 1.5;
+  font-size: 1.1rem;
+  opacity: 0.5;
+}
+@media (min-width: 769px) {
+  .main-container {
+    width: 74.5%;
+  }
+
+  .article-img {
+    width: 49.5%;
+  }
+  .main-container-article:nth-of-type(even) .article-content {
+    order: -1;
+    text-align: right;
+  }
+  .main-container-article:nth-of-type(even) .article-content-title {
+    padding-right: 23px;
+    padding-left: 0;
+  }
+
+  .main-container-article:nth-of-type(even) .article-date {
+    order: -1;
+    padding-left: 17px;
+    padding-top: 18px;
+  }
+}
+
+@media (max-width: 768px) {
+  body {
+    padding: 0 15px;
+    max-width: 100%;
+  }
+  .header {
+    height: 200px;
+  }
+  .header-wrap {
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .main-nav {
+    height: auto;
+    order: -1;
+  }
+  .main-nav ul {
+    display: none;
+  }
+  .sandwich-btn span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+
+    background: #fff;
+    border-radius: 3px;
+  }
+  .banner {
+    background-size: cover;
+    height: 350px;
+    width: 100%;
+  }
+  .banner-wrap h1 {
+    margin-bottom: 10px;
+  }
+  .banner-wrap p {
+    width: auto;
+    font-size: 0.85rem;
+    margin-bottom: 40px;
+  }
+  .main-container {
+    width: 60%;
+  }
+  .main-container-article {
+    flex-direction: column;
+    height: fit-content;
+  }
+  .article-img {
+    width: 100%;
+    height: 50%;
+  }
+  .article-content {
+    width: 100%;
+  }
+  .article-content-title h1 {
+    font-size: 3rem;
+    padding-left: 30px;
+    padding-right: 35px;
+  }
+  .article-content p {
+    padding: 15px 25px 25px 30px;
+
+    word-spacing: 0;
+  }
+  .main-aside {
+    width: 37%;
+  }
+  .footer {
+    height: max-content;
+    padding: 20px;
+  }
+  .footer-wrap {
+    flex-direction: column;
+    padding: 15px auto;
+    text-align: center;
+  }
+  .footer-rightside {
+    padding: 0;
+  }
+}
+
+@media (max-width: 480px) {
+  main {
+    flex-direction: column;
+  }
+  .banner-wrap h1 {
+    margin-bottom: 10px;
+    font-size: 3rem;
+  }
+  .main-container {
+    width: 100%;
+  }
+
+  .article-img {
+    width: 100%;
+  }
+  .main-aside {
+    width: 100%;
+    padding: 0;
+  }
+}
